# ishikari

./: .env  Cargo.toml
examples/: basic.rs
ishikari/: Cargo.toml
ishikari-macros/: Cargo.toml
ishikari-macros/src/: lib.rs
ishikari/examples/: basic.rs  common.rs  producer.rs  worker.rs
ishikari/src/: engine.rs  lib.rs  model.rs  queue.rs  result.rs  stager.rs
ishikari/src/engine/: postgres.rs  storage.rs
migrations/: 20231124165159_create_jobs_table.sql
src/: engine.rs  job.rs  lib.rs  queue.rs  stager.rs  worker.rs
