[package]
name = "ishikari"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
figment = { version = "0.10.12", features = ["env", "yaml"] }
futures = "0.3.29"
ishikari-macros = { path = "../ishikari-macros" }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["migrate", "runtime-tokio", "tls-rustls", "postgres", "chrono", "json"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typetag = "0.2.13"
